Add grouping functionality in `prepare_index_folders` to organize files by suffix. Introduce a new option in the GUI for grouping and handle errors related to missing suffixes more effectively. Update `settings.json` to include a new company code.

--- a/settings.json
+++ b/settings.json
@@ -4,6 +4,7 @@
     "GST": "Gastrans",
     "CDT": "Comita DTech",
     "CNE": "Contex",
+    "CT": "Comita Technics",
     "GGC": "Giprogazcentr",
     "DGT": "Drager",
     "DTA": "DTA Process&Safety",
