Update AGENTS.md for project documentation clarity, add default transmittal senders to settings.json, and enhance GUI to allow sender selection. Refactor settings loading and processing functions in toir_tra_report_v1.py to accommodate new sender functionality. Update tests to reflect changes in data structure.

--- a/settings.json
+++ b/settings.json
@@ -33,5 +33,8 @@
     "TSL": "Tesla Ekspo",
     "VIS": "VIS Company",
     "VLK": "Vulkan Ingenjering"
-  }
+  },
+  "senders": [
+    "Андреj Дунаев, главни експерт +381 69 801 53 43, dunaevaacmtech.rs"
+  ]
 }
