Update AGENTS.md, README.md, and settings.json for version 3.0; enhance transmittal sender functionality and update GUI title. Adjust PyInstaller command and clarify user settings in documentation.

--- a/settings.json
+++ b/settings.json
@@ -35,6 +35,7 @@
     "VLK": "Vulkan Ingenjering"
   },
   "senders": [
-    "Андреj Дунаев, главни експерт +381 69 801 53 43, dunaevaacmtech.rs"
+    "Анатолиј Крамар, главни експерт +381 69 807 65 37, kramaras@cmtech.rs",
+    "Андреj Дунаев, главни експерт +381 69 801 53 43, dunaevaa@cmtech.rs"
   ]
 }
